package com.example.oulearning.organization.domain.hierarchy;

import java.util.Optional;

public interface OrganizationalUnitRepository {
    Optional<OrganizationalUnit> findById(OrganizationalUnitId id);

    void save(OrganizationalUnit organizationalUnit);
}
